--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,94 @@
-<!-- static/index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Energy Data Logger</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+            border-bottom: 2px solid #0066cc;
+            padding-bottom: 10px;
+        }
+        h1 {
+            color: #0066cc;
+        }
+        .status-panel {
+            background-color: #e9f5ff;
+            border-left: 4px solid #0066cc;
+            padding: 15px;
+            margin-bottom: 30px;
+            border-radius: 0 4px 4px 0;
+        }
+        .menu {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .menu-item {
+            background-color: #ffffff;
+            border: 2px solid #0066cc;
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+            color: #0066cc;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+        .menu-item:hover {
+            background-color: #e9f5ff;
+            transform: translateY(-5px);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+        }
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 14px;
+            color: #666;
+            padding-top: 10px;
+            border-top: 1px solid #ddd;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Energy Data Logger</h1>
+        <p>Remote monitoring and analysis of power consumption data</p>
+    </header>
 
-<!doctype html>
-<title>Energy Data Logger</title>
-<h1 style="font-family:sans-serif">Energy Data Logger</h1>
+    <div class="status-panel">
+        <h3>System Status</h3>
+        <p>Logger: <span id="logger-status">Inactive</span></p>
+        <p>Last update: <span id="last-update">Never</span></p>
+    </div>
+
+    <h2>Main Menu</h2>
+    <div class="menu">
+        <div class="menu-item">1. Log New Data</div>
+        <div class="menu-item">2. View Data</div>
+        <div class="menu-item">3. Analyze Data</div>
+        <div class="menu-item">4. Download Data</div>
+    </div>
+
+    <div id="latest-readings" style="margin-top: 30px;">
+        <h3>Latest Readings</h3>
+        <p>No data available. Start logging to see real-time measurements.</p>
+    </div>
+
+    <footer>
+        <p>Energy Data Logger Project &copy; 2025</p>
+    </footer>
+</body>
+</html>
