Added webapp analyze data functionality

--- a/static/index.html
+++ b/static/index.html
@@ -84,7 +84,8 @@
         <div class="menu-item">1. Log New Data</div>
         <div class="menu-item">2. View Data</div>
         <div class="menu-item">3. Analyze Data</div>
-        <div class="menu-item">4. Settings</div>
+        <div class="menu-item">4. Visualize Data</div>
+        <div class="menu-item">5. Settings</div>
     </div>
 
     <div id="latest-readings" style="margin-top: 30px;">
