Added webapp visualize data functionality

--- a/static/index.html
+++ b/static/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <footer>
-        <p>Energy Data Logger Project &copy; 2025</p>
+        <p>Energy Data Logger by Hee Zi Jie &copy; 2025</p>
     </footer>
 </body>
 </html>
