--- a/static/index.html
+++ b/static/index.html
@@ -109,6 +109,19 @@
         </div>
     </div>
 
+    <!-- Settings Modal -->
+    <div id="settings-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Settings</h2>
+                <span class="close-modal">×</span>
+            </div>
+            <div class="modal-body" id="settings-body">
+                <p class="loading">Loading settings...</p>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>Energy Data Logger by Hee Zi Jie &copy; 2025</p>
     </footer>
