--- a/static/index.html
+++ b/static/index.html
@@ -7,63 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/styles.css">
     <title>Energy Data Logger</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        header {
-            text-align: center;
-            margin-bottom: 30px;
-            border-bottom: 2px solid #0066cc;
-            padding-bottom: 10px;
-        }
-        h1 {
-            color: #0066cc;
-        }
-        .status-panel {
-            background-color: #e9f5ff;
-            border-left: 4px solid #0066cc;
-            padding: 15px;
-            margin-bottom: 30px;
-            border-radius: 0 4px 4px 0;
-        }
-        .menu {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
-        }
-        .menu-item {
-            background-color: #ffffff;
-            border: 2px solid #0066cc;
-            border-radius: 8px;
-            padding: 20px;
-            text-align: center;
-            font-size: 18px;
-            font-weight: bold;
-            color: #0066cc;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-        .menu-item:hover {
-            background-color: #e9f5ff;
-            transform: translateY(-5px);
-            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-        }
-        footer {
-            margin-top: 40px;
-            text-align: center;
-            font-size: 14px;
-            color: #666;
-            padding-top: 10px;
-            border-top: 1px solid #ddd;
-        }
-    </style>
 </head>
 <body>
     <script src="static/app.js"></script>
@@ -88,7 +31,7 @@
         <div class="menu-item">5. Settings</div>
     </div>
 
-    <div id="latest-readings" style="margin-top: 30px;">
+    <div id="latest-readings">
         <h3>Latest Readings</h3>
         <p>No data available. Start logging to see real-time measurements.</p>
     </div>
