--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>Energy Data Logger</h1>
             <div class="theme-switcher">
-                <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/sun.svg" id="theme-icon" alt="Theme Toggle">
+                <img src="/static/icons/sun.svg" id="theme-icon" alt="Theme Toggle">
             </div>
         </header>
 
@@ -36,23 +36,23 @@
                 <h2>Main Menu</h2>
                 <div class="menu">
                     <button class="menu-item primary" id="log-button">
-                        <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/radio.svg" class="icon" alt="Log Icon">
+                        <img src="/static/icons/radio.svg" class="icon" alt="Log Icon">
                         <span id="log-button-text">Log New Data</span>
                     </button>
                     <button class="menu-item" id="view-data-button">
-                        <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/file-text.svg" class="icon" alt="View Icon">
+                        <img src="/static/icons/file-text.svg" class="icon" alt="View Icon">
                         <span>View Data</span>
                     </button>
                     <button class="menu-item" id="analyze-data-button">
-                        <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/bar-chart-2.svg" class="icon" alt="Analyze Icon">
+                        <img src="/static/icons/bar-chart-2.svg" class="icon" alt="Analyze Icon">
                         <span>Analyze Data</span>
                     </button>
                     <button class="menu-item" id="visualize-data-button">
-                        <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/trending-up.svg" class="icon" alt="Visualize Icon">
+                        <img src="/static/icons/trending-up.svg" class="icon" alt="Visualize Icon">
                         <span>Visualize Data</span>
                     </button>
                     <button class="menu-item" id="settings-button">
-                        <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/settings.svg" class="icon" alt="Settings Icon">
+                        <img src="/static/icons/settings.svg" class="icon" alt="Settings Icon">
                         <span>Settings</span>
                     </button>
                 </div>
