--- a/static/index.html
+++ b/static/index.html
@@ -50,6 +50,10 @@
                         <img src="/static/icons/trending-up.svg" class="icon" alt="Visualize Icon">
                         <span>Visualize Data</span>
                     </button>
+                    <button class="menu-item" id="download-logs-button">
+                        <img src="/static/icons/download.svg" class="icon" alt="Download Icon">
+                        <span>Download Application Logs</span>
+                    </button>
                     <button class="menu-item" id="settings-button">
                         <img src="/static/icons/settings.svg" class="icon" alt="Settings Icon">
                         <span>Settings</span>
