--- a/static/index.html
+++ b/static/index.html
@@ -174,6 +174,12 @@
         </div>
     </div>
 
+    <svg class="inline-svg" style="position: absolute; width: 0; height: 0; pointer-events: none; user-select: none;">
+        <symbol id="custom-check" viewBox="0 0 12 10">
+            <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+        </symbol>
+    </svg>
+
     <footer>
         <p>Energy Data Logger by Hee Zi Jie © 2025</p>
     </footer>
