Added sync status indicator

--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,10 @@
                         <strong id="logger-status" class="idle">Loading...</strong>
                     </div>
                     <div class="status-item">
+                        <span>Sync:</span>
+                        <strong id="logger-sync" class="inactive">Loading...</strong>
+                    </div>
+                    <div class="status-item">
                         <span>Last Updated:</span>
                         <strong id="last-update">None</strong>
                     </div>
