--- a/static/index.html
+++ b/static/index.html
@@ -194,6 +194,26 @@
         </div>
     </div>
 
+    <div id="customer-select-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Select Customer</h2>
+                <span class="close-modal">×</span>
+            </div>
+
+            <div class="modal-body">
+                <div class="customer-search-wrapper">
+                    <img src="/static/icons/search.svg" class="search-icon" alt="Search">
+                    <input type="text" id="customer-search-input" placeholder="Search by Name or LEE No">
+                </div>
+                <div id="customer-list-container" class="file-list"></div>
+                <div class="action-buttons" style="margin-top: 1.5rem;">
+                    <button id="confirm-customer-btn" class="action-button">Confirm</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <svg class="inline-svg" style="position: absolute; width: 0; height: 0; pointer-events: none; user-select: none;">
         <symbol id="custom-check" viewBox="0 0 12 10">
             <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
